List installed software and versions in CI (#12899)
* List installed software in CI

* Don't require npm@8, install most recent one

--- a/.github/workflows/bokehjs-ci.yml
+++ b/.github/workflows/bokehjs-ci.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Upgrade npm
         shell: bash
         run: |
-          npm install --location=global npm@8
+          npm install --location=global npm
 
       - name: Install chromium
         if: runner.os == 'Linux'
@@ -56,6 +56,23 @@ jobs:
         shell: bash
         run: |
           npm ci --no-progress
+
+      - name: List installed software
+        working-directory: ./bokehjs
+        shell: bash
+        run: |
+          echo "node $(node --version)"
+          echo "npm $(npm --version)"
+          if [ "$RUNNER_OS" == "Linux" ]; then
+            chromium --version
+          elif [ "$RUNNER_OS" == "Windows" ]; then
+            # TODO: this hangs; version is reported in tests
+            # c:/Program\ Files/Google/Chrome/Application/chrome.EXE --version
+            echo "Chromium ??? (see tests)"
+          elif [ "$RUNNER_OS" == "macOS" ]; then
+            /Applications/Google\ Chrome.app/Contents/MacOS/Google\ Chrome --version
+          fi
+          npm list
 
       - name: Build bokehjs
         working-directory: ./bokehjs
