Temporarily disable docker_from_wheel test in CI (#12963)

--- a/.github/workflows/bokeh-ci.yml
+++ b/.github/workflows/bokeh-ci.yml
@@ -292,6 +292,7 @@ jobs:
         run: bash scripts/ci/run_downstream_tests.sh
 
   docker_from_wheel:
+    if: ${{ false }}  # temporarily disable
     needs: build
     runs-on: ubuntu-latest
     env:
