--- a/.github/workflows/bokeh-docker-test.yml
+++ b/.github/workflows/bokeh-docker-test.yml
@@ -11,7 +11,8 @@ jobs:
   docker-test:
     runs-on: ubuntu-latest
     env:
-      IMAGE_TAG: bokeh/bokeh-dev:branch-3.2
+      IMAGE_TAG: bokeh/bokeh-dev:ianthomas23-docker_branch_3.2
+      #IMAGE_TAG: bokeh/bokeh-dev:branch-3.2
 
     steps:
       - name: Checkout the repository
