Disable "Post prepare environment" on Windows

--- a/.github/workflows/composite/test-setup/action.yml
+++ b/.github/workflows/composite/test-setup/action.yml
@@ -24,6 +24,7 @@ runs:
       with:
         miniconda-version: 'latest'
         activate-environment: bk-test
+        run-post: ${{ runner.os != 'Windows' }}
 
     - name: Install libmamba solver
       shell: bash -l {0}
