--- a/.github/workflows/bokeh-ci.yml
+++ b/.github/workflows/bokeh-ci.yml
@@ -27,6 +27,7 @@ jobs:
         with:
           miniconda-version: 'latest'
           activate-environment: bk-test
+          run-post: ${{ runner.os != 'Windows' }}
 
       - name: Install libmamba solver
         shell: bash -l {0}
