Use libmamba solver in CI (#13061)
* Use libmamba solver in CI

* Disable "Post prepare environment" on Windows

--- a/.github/workflows/bokeh-ci.yml
+++ b/.github/workflows/bokeh-ci.yml
@@ -27,7 +27,18 @@ jobs:
         with:
           miniconda-version: 'latest'
           activate-environment: bk-test
-          environment-file: conda/environment-build.yml
+          run-post: ${{ runner.os != 'Windows' }}
+
+      - name: Install libmamba solver
+        shell: bash -l {0}
+        run: |
+          conda install -q -n base conda-libmamba-solver
+          conda config --set solver libmamba
+
+      - name: Update bk-test environment
+        shell: bash -l {0}
+        run: |
+          conda env update -q -n bk-test -f conda/environment-build.yml
 
       - name: Install node modules
         run: bash scripts/ci/install_node_modules.sh
