--- a/.github/workflows/composite/test-setup/action.yml
+++ b/.github/workflows/composite/test-setup/action.yml
@@ -24,7 +24,18 @@ runs:
       with:
         miniconda-version: 'latest'
         activate-environment: bk-test
-        environment-file: conda/environment-test-${{ inputs.test-env }}.yml
+        run-post: ${{ runner.os != 'Windows' }}
+
+    - name: Install libmamba solver
+      shell: bash -l {0}
+      run: |
+        conda install -q -n base conda-libmamba-solver
+        conda config --set solver libmamba
+
+    - name: Update bk-test environment
+      shell: bash -l {0}
+      run: |
+        conda env update -q -n bk-test -f conda/environment-test-${{ inputs.test-env }}.yml
 
     - name: Download wheel package
       id: download
