pin sphinx to 5.3

--- a/conda/environment-release-build.yml
+++ b/conda/environment-release-build.yml
@@ -39,7 +39,7 @@ dependencies:
     # docs
     - autoclasstoc <=1.4
     - pydata_sphinx_theme ==0.9
-    - sphinx >5.1
+    - sphinx ==5.3
     - sphinx-copybutton
     - sphinx-design
     - sphinxext-opengraph
