--- a/bokehjs/make/package.json
+++ b/bokehjs/make/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bokeh/make",
-  "version": "3.1.0",
+  "version": "3.2.0-dev.1",
   "private": true,
   "description": "Internal package for bokehjs' build system",
   "license": "BSD-3-Clause",
