--- a/conda/environment-release-build.yml
+++ b/conda/environment-release-build.yml
@@ -38,8 +38,9 @@ dependencies:
   - pip:
     # docs
     - autoclasstoc <=1.4
-    - pydata_sphinx_theme ==0.9
+    - pydata_sphinx_theme
     - sphinx
     - sphinx-copybutton
     - sphinx-design
+    - sphinx-favicon
     - sphinxext-opengraph
