--- a/conda/environment-test-3.10.yml
+++ b/conda/environment-test-3.10.yml
@@ -65,11 +65,13 @@ dependencies:
     - mypy >=0.990
     # docs
     - autoclasstoc <=1.4
-    - pydata_sphinx_theme ==0.9
+    - pydata_sphinx_theme
     - requests-unixsocket >= 0.3.0
     - sphinx
     - sphinx-copybutton
     - sphinx-design
+    - sphinx-favicon
+    - sphinx-favicon
     - sphinxext-opengraph
     # tests
     - pandas-stubs ==1.5.2.221213
