--- a/conda/environment-test-minimal-deps.yml
+++ b/conda/environment-test-minimal-deps.yml
@@ -55,11 +55,12 @@ dependencies:
     - mypy >=0.990
     # docs
     - autoclasstoc <=1.4
-    - pydata_sphinx_theme ==0.9
+    - pydata_sphinx_theme
     - requests-unixsocket >= 0.3.0
     - sphinx
     - sphinx-copybutton
     - sphinx-design
+    - sphinx-favicon
     - sphinxext-opengraph
     # tests
     - ruff ==0.0.252
