--- a/.github/workflows/bokeh-ci.yml
+++ b/.github/workflows/bokeh-ci.yml
@@ -12,8 +12,8 @@ defaults:
     shell: bash -l {0}
 
 env:
-  CHROME_VER: '110.0.5481.100'
-  CHROME_REV: 'chromium_2333'
+  CHROME_VER: "110.0.5481.100"
+  CHROME_REV: "chromium_2333"
 
 jobs:
   build:
@@ -150,7 +150,7 @@ jobs:
       - name: Collect results
         if: always()
         env:
-          DST: 'examples-report'
+          DST: "examples-report"
         run: |
           mkdir -p ${DST}
           cp --parents examples-report.html $(cat .images-list) ${DST}
