Update docs infrastructure (#13094)
* Temporarily remove autoclasstoc

* Unpin Sphinx version

* Unpin theme, update favicons/GA, disable switcher

* update ga and navbar in conf.py

* Remove dupe line

* comment out autoclasstoc directive

* Set check_switcher to False

* partially re-enable autoclasstoc

* Remove duplicate entry in conf.py

* Remove layout.html customization

* Order options alphabetically

* Simplify custom.css

* Disable rtd footer to avoid unnecessary scrollbars

* Remove autoclasstoc

* Link landingpage hero image to gallery

* Remove GA script checks

---------

Co-authored-by: Bryan Van de Ven <bryan@bokeh.org>

--- a/conda/environment-release-build.yml
+++ b/conda/environment-release-build.yml
@@ -37,9 +37,9 @@ dependencies:
   - pip
   - pip:
     # docs
-    - autoclasstoc <=1.4
-    - pydata_sphinx_theme ==0.9
-    - sphinx ==5.3
+    - pydata_sphinx_theme
+    - sphinx
     - sphinx-copybutton
     - sphinx-design
+    - sphinx-favicon
     - sphinxext-opengraph
