Enable verbatimModuleSyntax in ESM packages

--- a/bokehjs/examples/tsconfig.json
+++ b/bokehjs/examples/tsconfig.json
@@ -24,6 +24,7 @@
     "module": "ES2022",
     "moduleResolution": "node",
     "isolatedModules": true,
+    "verbatimModuleSyntax": false,
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "skipLibCheck": true,
