--- a/bokehjs/src/lib/tsconfig.json
+++ b/bokehjs/src/lib/tsconfig.json
@@ -23,6 +23,7 @@
     "module": "ES2022",
     "moduleResolution": "node",
     "isolatedModules": true,
+    "verbatimModuleSyntax": true,
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
