--- a/conda/environment-test-3.9.yml
+++ b/conda/environment-test-3.9.yml
@@ -42,6 +42,7 @@ dependencies:
   - pytest-xdist
   - pytest-timeout
   - requests >=1.2.3
+  - urllib3 <2 # see https://github.com/bokeh/bokeh/issues/13152
   - scipy
   - selenium 4.2
   - toml
