pin sphinx to <7

--- a/.github/workflows/bokeh-release-build.yml
+++ b/.github/workflows/bokeh-release-build.yml
@@ -47,7 +47,7 @@ jobs:
       - name: Install sampledata
         run: python src/bokeh/util/sampledata.py
 
-      - name: Post install status
+      - name: List installed software
         run: |
           echo "node $(node --version)"
           echo "npm $(npm --version)"
