--- a/bokehjs/package.json
+++ b/bokehjs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bokeh/bokehjs",
-  "version": "3.2.0-rc.3",
+  "version": "3.2.0",
   "description": "Interactive, novel data visualization",
   "keywords": [
     "bokeh",
