--- a/bokehjs/package.json
+++ b/bokehjs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bokeh/bokehjs",
-  "version": "3.2.1",
+  "version": "3.2.2-rc.1",
   "description": "Interactive, novel data visualization",
   "keywords": [
     "bokeh",
