--- a/bokehjs/make/package.json
+++ b/bokehjs/make/package.json
@@ -12,16 +12,21 @@
     "./src/compiler"
   ],
   "devDependencies": {
-    "@types/node": "^18.11.18",
-    "@types/which": "^2.0.1",
+    "@types/eslint": "^8.44.2",
+    "@types/node": "^20.5.6",
+    "@types/which": "^3.0.0",
     "@types/yargs": "^16.0.4",
+    "@typescript-eslint/eslint-plugin": "^6.4.1",
+    "@typescript-eslint/parser": "^6.4.1",
+    "acorn": "^8.10.0",
     "chalk": "^4.1.2",
     "del": "^6.1.1",
-    "semver": "^7.3.8",
+    "eslint": "^8.47.0",
+    "semver": "^7.5.4",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.1.2",
-    "typescript": "~5.0.4",
-    "which": "^3.0.0",
-    "yargs": "^17.6.2"
+    "typescript": "~5.2.2",
+    "which": "^3.0.1",
+    "yargs": "^17.7.2"
   }
 }
