Pin urllib3<2 in pip dependencies as well

--- a/conda/environment-test-minimal-deps.yml
+++ b/conda/environment-test-minimal-deps.yml
@@ -70,3 +70,4 @@ dependencies:
     - types-pillow
     - types-pyyaml
     - types-requests
+    - urllib3 <2 # see https://github.com/bokeh/bokeh/issues/13407
