--- a/bokehjs/src/server/package.json
+++ b/bokehjs/src/server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bokeh/server",
-  "version": "3.3.0-dev.3",
+  "version": "3.3.0-rc.1",
   "private": true,
   "description": "Internal package for bokehjs' server",
   "license": "BSD-3-Clause",
