Add Python 3.12 to CI (#13419)
* Add Python 3.12 to CI

* Pip install some dependencies

* scikit-learn for 3.12 now on conda-forge

* Ignore utcfromtimestamp warning

* Aggressively ignore all deprecation warnings

* More specific warning to ignore

* fix Mock.called_once_with call

* correct mock_calls assertion

* Apply suggestions from code review

* Update test_descriptors.py

* Update test_descriptors.py

---------

Co-authored-by: Ian Thomas <ianthomas23@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@ classifiers = [
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
     "Programming Language :: JavaScript",
     "Topic :: Office/Business",
     "Topic :: Office/Business :: Financial",
@@ -105,6 +106,7 @@ filterwarnings = [
     '''ignore:elementwise comparison failed; this will raise an error in the future\.:DeprecationWarning''',
     '''ignore:numba is not installed\. This example will be painfully slow\.:UserWarning''',
     '''ignore:Could not infer format, so each element will be parsed individually, falling back to `dateutil`\. To ensure parsing is consistent and as-expected, please specify a format\.:UserWarning''',
+    '''ignore:datetime.datetime.utcfromtimestamp():DeprecationWarning:dateutil''',
 ]
 
 [tool.coverage.run]
