--- a/bokehjs/src/lib/package.json
+++ b/bokehjs/src/lib/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bokeh/lib",
-  "version": "3.3.0-rc.3",
+  "version": "3.3.0",
   "private": true,
   "description": "Internal package for bokehjs' implementation",
   "license": "BSD-3-Clause",
