--- a/conda/environment-test-3.10.yml
+++ b/conda/environment-test-3.10.yml
@@ -82,4 +82,6 @@ dependencies:
     - types-pillow
     - types-pyyaml
     - types-requests
+    - types-toml
     - urllib3 <2 # see https://github.com/bokeh/bokeh/issues/13407
+    - vermin
