--- a/.github/workflows/bokehjs-ci.yml
+++ b/.github/workflows/bokehjs-ci.yml
@@ -40,8 +40,12 @@ jobs:
         if: runner.os == 'Linux'
         shell: bash
         run: |
-          echo "Currently installed $(chromium --version); expected $CHROME_VER"
-          if [[ "$(chromium --version | cut -d' ' -f2)" = "$CHROME_VER" ]]; then
+          INSTALLED=$(chromium --version | cut -d' ' -f2 | cut -d'.' -f1-3)
+          EXPECTED=$(echo "$CHROME_VER" | cut -d'.' -f1-3)
+
+          echo "Currently installed Chromium ${INSTALLED}.*; expected ${EXPECTED}.*"
+
+          if [[ "$INSTALLED" = "$EXPECTED" ]]; then
             echo "Using pre-installed version of chromium"
           else
             URL=https://github.com/bokeh/chromium/raw/main/linux/$CHROME_VER
