--- a/bokehjs/src/compiler/package.json
+++ b/bokehjs/src/compiler/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bokeh/compiler",
-  "version": "3.3.1-rc.1",
+  "version": "3.3.1",
   "private": true,
   "description": "Internal package for bokehjs' extensions compiler",
   "license": "BSD-3-Clause",
