--- a/bokehjs/package.json
+++ b/bokehjs/package.json
@@ -41,7 +41,6 @@
   "types": "build/js/types/bokeh.d.ts",
   "dependencies": {
     "@bokeh/numbro": "^1.6.2",
-    "@bokeh/slickgrid": "~2.4.4103",
     "@types/geojson": "^7946.0.13",
     "@types/google.maps": "^3.54.10",
     "@types/proj4": "^2.5.5",
@@ -53,6 +52,7 @@
     "nouislider": "^15.7.1",
     "proj4": "^2.9.2",
     "regl": "^2.1.0",
+    "slickgrid": "~5.8.1",
     "sprintf-js": "^1.1.3",
     "timezone": "^1.0.23",
     "tslib": "^2.6.2",
