--- a/conda/environment-release-build.yml
+++ b/conda/environment-release-build.yml
@@ -38,7 +38,7 @@ dependencies:
   - pip:
     # docs
     - pydata_sphinx_theme
-    - sphinx < 7
+    - sphinx >= 7.1.0
     - sphinx-copybutton
     - sphinx-design
     - sphinx-favicon
