--- a/conda/environment-test-minimal-deps.yml
+++ b/conda/environment-test-minimal-deps.yml
@@ -35,7 +35,7 @@ dependencies:
   - pygments
   - pygraphviz
   - pytest >=7.0
-  - pytest-asyncio=0.12.0
+  - pytest-asyncio ==0.21.1 # https://github.com/bokeh/bokeh/issues/13578
   - pytest-cov >=1.8.1
   - pytest-html
   - pytest-xdist
