--- a/pyproject.toml
+++ b/pyproject.toml
@@ -172,6 +172,9 @@ ignore = [
 line-length = 165
 target-version = "py39"
 
+[tool.ruff.lint.flake8-tidy-imports]
+banned-module-level-imports = ["typing_extensions"]
+
 # For now enable each typed module individually.
 [[tool.mypy.overrides]]
 module = [
