--- a/.github/workflows/bokeh-ci.yml
+++ b/.github/workflows/bokeh-ci.yml
@@ -98,7 +98,7 @@ jobs:
       - name: Prepare Environment
         uses: ./.github/workflows/composite/test-setup
         with:
-          test-env: '3.9'
+          test-env: '3.10'
           source-tree: 'keep'
           sampledata: 'cache'
 
@@ -124,7 +124,7 @@ jobs:
       - name: Prepare Environment
         uses: ./.github/workflows/composite/test-setup
         with:
-          test-env: '3.9'
+          test-env: '3.10'
           source-tree: 'delete'
           sampledata: 'cache'
 
@@ -215,7 +215,7 @@ jobs:
       max-parallel: 6
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: ['3.9', '3.10', '3.11', '3.12']
+        python-version: ['3.10', '3.11', '3.12']
     env:
       OS: ${{ matrix.os }}
       PYTHON: ${{ matrix.python-version }}
@@ -302,7 +302,7 @@ jobs:
       - name: Prepare Environment
         uses: ./.github/workflows/composite/test-setup
         with:
-          test-env: '3.9'
+          test-env: '3.10'
           source-tree: 'delete'
           sampledata: 'download' # test at least one real download
 
