Update dependencies in minimal-deps

--- a/conda/environment-test-minimal-deps.yml
+++ b/conda/environment-test-minimal-deps.yml
@@ -9,7 +9,7 @@ dependencies:
   - jinja2 >=2.7
   - numpy <1.25
   - packaging >=16.8
-  - pandas 1.2
+  - pandas 1*,>=1.2
   - pillow >=4.0
   - python-dateutil >=2.1
   - pyyaml >=3.10
