Use `ruff` to ban `typing_extensions` at the top-level (#13633)
* Upgrade to ruff 0.1.11

* Enable TID rules and disable TID252 for now

* Ban `typing_extensions` module at the top-level

* Remove test_no_typing_extensions_common

* Import `typing_extensions` under `TYPE_CHECKING` in `*.pyi`

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -143,7 +143,7 @@ exclude = [
     'node_modules',
 ]
 per-file-ignores = {"__init__.py" = ["F403"]}
-select = ["B", "COM", "E", "F", "RUF", "UP", "W"]
+select = ["B", "COM", "E", "F", "RUF", "TID", "UP", "W"]
 ignore = [
     'B005', # Using .strip() with multi-character strings is misleading the reader
     'B006', # Do not use mutable data structures for argument defaults
@@ -167,9 +167,13 @@ ignore = [
     'UP035',  # Import from `collections.abc` instead: `Iterator`
     'RUF001', # String contains ambiguous unicode character `σ` (did you mean `o`?)
     'RUF012', # Mutable class attributes should be annotated with `typing.ClassVar`
+    'TID252', # Prefer absolute imports over relative imports from parent modules
 ]
 line-length = 165
 target-version = "py39"
+
+[tool.ruff.lint.flake8-tidy-imports]
+banned-module-level-imports = ["typing_extensions"]
 
 # For now enable each typed module individually.
 [[tool.mypy.overrides]]
