Drop support for Python 3.9 and modernize the codebase (#13634)
* Drop support for python 3.9

* Use str.remove{prefix,suffix}()

* Replace {typing_extensions->typing}.TypeGuard

* Use `A | B` instead of `Union[A, B]`

* Replace {typing_extensions->typing}.TypeAlias

* Try out pattern matching instead of if-elif-else

* Update dependencies in minimal-deps

* Disable bokeh-docker-test

--- a/conda/environment-test-minimal-deps.yml
+++ b/conda/environment-test-minimal-deps.yml
@@ -2,14 +2,14 @@ name: bk-test
 channels:
   - conda-forge
 dependencies:
-  - python=3.9
+  - python=3.10
 
   # runtime
   - contourpy >=1.2
   - jinja2 >=2.7
   - numpy <1.25
   - packaging >=16.8
-  - pandas 1.2
+  - pandas 1*,>=1.2
   - pillow >=4.0
   - python-dateutil >=2.1
   - pyyaml >=3.10
