correct => to >=, remove duplicated networkx in environment files

--- a/conda/environment-release-build.yml
+++ b/conda/environment-release-build.yml
@@ -19,7 +19,7 @@ dependencies:
   # docs
   - colorcet
   - pandas-datareader
-  - firefox =>96
+  - firefox >=96
   - geckodriver
   - icalendar
   - ipython
