Robustify `node make pack` and display versions (#13851)
* Robustify `node make pack` and display versions

* Upgrade npm in test-setup/action.yml

* Lint bokehjs/make/index.js

* Use `shell: true` when spawning `npm.cmd`

* Add nodejs to downstream environment

--- a/.github/workflows/composite/test-setup/action.yml
+++ b/.github/workflows/composite/test-setup/action.yml
@@ -59,6 +59,11 @@ runs:
       working-directory: ./bokehjs/build/dist/
       run: ln -s $(ls -t bokeh-bokehjs-*.tgz | head -n 1) bokeh-bokehjs.tgz
 
+    - name: Upgrade npm
+      shell: bash -l {0}
+      run: |
+        npm install --location=global npm
+
     - name: Cache node modules
       if: ${{ inputs.source-tree == 'keep' }}
       uses: actions/cache@v3
