Switch to using bokeh_sampledata package

--- a/conda/environment-release-build.yml
+++ b/conda/environment-release-build.yml
@@ -37,6 +37,7 @@ dependencies:
   - pip
   - pip:
     # docs
+    - bokeh_sampledata
     - pydata_sphinx_theme==0.15.2
     - sphinx >= 7.1.0
     - sphinx-copybutton
