--- a/src/bokeh/.isort.cfg
+++ b/src/bokeh/.isort.cfg
@@ -14,3 +14,6 @@ import_heading_localfolder=Bokeh imports
 
 known_first_party=bokeh
 known_third_party=boto,mock,selenium,sphinx
+
+[settings]
+skip_glob=sampledata/*
