--- a/conda/environment-test-minimal-deps.yml
+++ b/conda/environment-test-minimal-deps.yml
@@ -41,7 +41,7 @@ dependencies:
   - pytest-xdist
   - pytest-timeout
   - requests >=1.2.3,!=2.32.* # see https://github.com/bokeh/bokeh/issues/13910
-  - urllib3 <2 # see https://github.com/bokeh/bokeh/issues/13152
+  - urllib3
   - selenium 4.2
 
   # examples
@@ -71,4 +71,3 @@ dependencies:
     - types-pillow
     - types-pyyaml
     - types-requests
-    - urllib3 <2 # see https://github.com/bokeh/bokeh/issues/13407
