add first tests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -248,6 +248,8 @@ module = [
     "bokeh.ext.*",
     "bokeh.io.*",
 
+    "bokeh.layouts.*",
+
     "bokeh.palettes",
     "bokeh.plotting._tools",
     "bokeh.protocol.*",
