Validate CSS colors by parsing

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -9,6 +9,7 @@ include src/bokeh/util/sampledata.json
 include src/bokeh/_sri.json
 include src/bokeh/LICENSE.txt
 include src/bokeh/py.typed
+include src/bokeh/colors/*.lark
 
 # start with an empty static/ dir
 prune src/bokeh/server/static
