--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "PyYAML >=3.10",
     "tornado >=6.2",
     "xyzservices >=2021.09.1",
+    "lark >=1.1.9",
 ]
 authors = [
   {email = "info@bokeh.org"},
